Use Java 8 instead of Java 11